--- a/package.json
+++ b/package.json
@@ -12,7 +12,8 @@
         "http-server": "0.5.x",
         "mocha": "1.3.x",
         "q": "0.8.x",
-        "sinon": "~1.4.2"
+        "sinon": "~1.4.2",
+        "almond":"0.3.3"
     },
 
     "license": "MIT"
